--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,28 @@
 {
   "name": "Restaurant reviews",
   "short_name": "Restaurant",
+  "icons": [
+    {
+        "src": "img/icons/android-chrome-192x192.png",
+        "sizes": "192x192",
+        "type": "image/png"
+    },
+    {
+        "src": "img/icons/android-chrome-256x256.png",
+        "sizes": "256x256",
+        "type": "image/png"
+    },
+    {
+        "src": "img/icons/android-chrome-384x384.png",
+        "sizes": "384x384",
+        "type": "image/png"
+    },
+    {
+        "src": "img/icons/android-chrome-512x512.png",
+        "sizes": "512x512",
+        "type": "image/png"
+    }
+],
   "start_url": "/index.html",
   "theme_color": "#3F51B5",
   "background_color": "#ffffff",
